--- a/intro.html
+++ b/intro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | INTRODUCT</title>
+  <title>Home | INTRODUCT_G5_Sec27</title>
   <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase"> 
     <div class="container">
-      <a class="navbar-brand" href="#">INTRODUCTION</a>
+      <a class="navbar-brand" href="#">INTRODUCTION_G5_Sec27</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
