--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg fixed-top text-uppercase"> 
+  <!--<nav class="navbar navbar-expand-lg fixed-top text-uppercase"> 
     <div class="container">
       <a class="navbar-brand" href="#">INTRODUCTION_G5_Sec27</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -31,8 +31,33 @@
         </div>
       </div>
     </div>
+  </nav>-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">INTRODUCTION_G5_Sec27</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <dis class="ms-auto">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active  px-lg-4 rounded"  href="#OFF">AOF</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  px-lg-4 rounded" href="#PALM">PALM</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  px-lg-4 rounded" href="#BOOK">BOOK</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  px-lg-4 rounded" href="#STAMP">STAMP </a>
+            </li>
+          </ul>
+       </dis>
+      </div>
+    </div>
   </nav>
-
  
 
   <section id="OFF" class="about py-5">
