--- a/intro.html
+++ b/intro.html
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-  </nav>-->
+  </nav>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">INTRODUCTION_G5_Sec27</a>
@@ -55,6 +55,33 @@
             </li>
           </ul>
        </dis>
+      </div>
+    </div>
+  </nav>-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+          <li class="nav-item">
+            <a class="nav-link active  px-lg-4 rounded"  href="#OFF">AOF</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  px-lg-4 rounded" href="#BOOK">BOOK</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  px-lg-4 rounded" href="#PALM">PALM</a>
+          </li>
+          <li class="nav-item">
+             <a class="nav-link  px-lg-4 rounded" href="#BOOK">BOOK</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  px-lg-4 rounded" href="#STAMP">STAMP </a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
