--- a/intro.html
+++ b/intro.html
@@ -58,19 +58,26 @@
       </div>
     </div>
   </nav>-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> ">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">INTRODUCTION_G5_Sec27</a>
+
+ 
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
           <li class="nav-item">
-            <a class="nav-link active  px-lg-4 rounded"  href="#OFF">AOF</a>
+            <a class="nav-link  px-lg-4 rounded"  href="project.html">PROJECT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  px-lg-4 rounded" href="#BOOK">BOOK</a>
+            <a class="nav-link  px-lg-4 rounded"  href="#OFF">AOF</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  px-lg-4 rounded" href="#P">P</a>
           </li>
           <li class="nav-item">
             <a class="nav-link  px-lg-4 rounded" href="#PALM">PALM</a>
@@ -193,10 +200,9 @@ I’m always eager to learn new technologies, improve my problem-solving skills,
   </section>
 
   <!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 </body>
 
 </html>
