--- a/project.html
+++ b/project.html
@@ -1,57 +1,163 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | INTRODUCT_G5_Sec27</title>
-  <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
+  <title>Home | BreakFast App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <style>
+    body {
+    background-color: white;
+    color: black; /* ให้ตัวอักษรอ่านง่าย */
+    font-family: Arial, sans-serif;
+  }
+    .navbar {
+      background-color: ;
+    }
+    .navbar-brand {
+      font-weight: bold;
+    }
+    #STAMP {
+      background-color: #111;
+      color: gold;
+      padding-top: 100px;
+    }
+    h1 {
+      font-size: 8.5rem;
+    font-weight: 900;
+    color: gold;
+    }
+    h2 {
+    font-size: 3rem;
+    font-weight: 300;
+    color: white;
+    }
+    
+    .section-title {
+      font-size: 45px;
+      margin-bottom: 20px;
+      color: gold;
+    }
+    .card {
+      background-color: #333;
+      color: white;
+    }
+    .steps li {
+      margin: 10px 0;
+      font-size: 18px;
+    }
+    p{
+    font-size: 1.3rem;
+    font-weight: 300;
+    color: white;
+    
+}
+.carousel,
+  .carousel-inner,
+  .carousel-item,
+  .carousel-control-prev,
+  .carousel-control-next {
+    border: none !important;
+    outline: none !important;
+  }
+   
+  </style>
 </head>
 
 <body>
 
-  
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">BreakFast App</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">INTRODUCTION_G5_Sec27</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-          <li class="nav-item">
-            <a class="nav-link  px-lg-4 rounded" href="intro.html">HOME</a>
-          </li>
-        </ul>
+</div>
+
+<section id="STAMP" class="about py-3">
+  <div class="container py-5">
+    <div class="row py-4">
+      <!-- Slider Column -->
+      <div id="carouselExample" class="col-lg-4 carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="start.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="main.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- Content Column -->
+      <div class="col-lg-8">
+        <h1>About This Project</h1>
+        <h2>BreakFast แอปสุ่มอาหารเช้า</h2>
+        <p>มื้อเช้ากินอะไรดี? BreakFast App จะช่วยคุณสุ่มเมนูอาหารเช้าให้อย่างง่ายดาย</p>
       </div>
     </div>
-  </nav>
- 
+  </div>
+</section>
 
-  <section id="STAMP" class="about py-3">
-    <div class="container py-5">
-      <div class="row py-5">
-        <div class="col-lg-5">
-          <img src="start.png" alt="About Me" class="img-fluid">
+
+<section class="py-5" style="background-color: #111;">
+  <div class="container">
+    <h1 class="section-title"> objective</h1>
+    <div class="row text-center">
+      <div class="col-md-3">
+        <div class="card p-3">
+          <h3>แก้ปัญหา</h3>
+          <p>ช่วยตัดสินใจเลือกเมนูได้ง่ายขึ้น</p>
         </div>
-        <div class="col-lg-7 move-up ">
-          <h1 >About This Project</h1>
-          <h2> BreakFast</h2>
-          <p class="py-3">I am<span class="fw-bold"> Sirinuttarin Meesee</span>
+      </div>
+      <div class="col-md-3">
+        <div class="card p-3">
+          <h3>ควบคุมแคลอรี่</h3>
+          <p>กำหนดปริมาณแคลอรี่ที่เหมาะสมได้</p>
         </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card p-3">
+          <h3>สนุก</h3>
+          <p>เพิ่มความสนุกให้กับการเลือกอาหาร</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card p-3">
+          <h3>ประหยัดเวลา</h3>
+          <p>ไม่ต้องเสียเวลาคิดเมนูเอง</p>
+        </div>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-  <script src="js/main.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+  crossorigin="anonymous"></script>
+
 </body>
-
 </html>
