--- a/project.html
+++ b/project.html
@@ -16,7 +16,7 @@
     font-family: Arial, sans-serif;
   }
     .navbar {
-      background-color: ;
+      background-color: black;
     }
     .navbar-brand {
       font-weight: bold;
