--- a/project.html
+++ b/project.html
@@ -72,7 +72,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">BreakFast App</a>
+    <a class="navbar-brand" href="#">KNOWFOOD</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -113,8 +113,8 @@
       <!-- Content Column -->
       <div class="col-lg-8">
         <h1>About This Project</h1>
-        <h2>BreakFast แอปสุ่มอาหารเช้า</h2>
-        <p>มื้อเช้ากินอะไรดี? BreakFast App จะช่วยคุณสุ่มเมนูอาหารเช้าให้อย่างง่ายดาย</p>
+        <h2>KNOWFOOD แอปสุ่มอาหาร</h2>
+        <p>มื้อนี้กินอะไรดี? KNOWFOOD App จะช่วยคุณสุ่มเมนูอาหารเช้าให้อย่างง่ายดาย</p>
       </div>
     </div>
   </div>
