--- a/project.html
+++ b/project.html
@@ -95,7 +95,7 @@
       <div id="carouselExample" class="col-lg-4 carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="start.png" class="d-block w-100" alt="...">
+            <img src="start (1).png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="main.png" class="d-block w-100" alt="...">
