--- a/project.html
+++ b/project.html
@@ -120,7 +120,7 @@
       <p>Breakfast is the first meal of the day eaten after waking from a night's sleep, typically in the morning. The word in English refers to breaking the fasting period of the previous night. There is a strong likelihood for one or more "typical", or "traditional", breakfast menus to exist in most places, but their composition varies widely from place to place, and has varied over time, so that globally a very wide range of preparations and ingredients are now associated with breakfast.</p>
     </div>
     <div class="col-lg-3" style="margin-top: 80px; ">
-      <iframe width="530" height="400" src="https://www.youtube.com/embed/2h9CqRlHzrc" title="YouTube video player"
+      <iframe width="530" height="400" src="https://www.youtube.com//embed/zJla3miahHU" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         >
       </iframe>
